# mwb

./: .gitignore  README.md  pyproject.toml
docs/: ADAPTERS.md  CAUSAL_VERIFICATION.md  CLAIM_GRAMMAR.md  DIAGNOSIS_AND_PROBES.md  EVIDENCE_GRAPH.md  EXAMPLE_GEOMETRY.md  HYPOTHESIS_LIFECYCLE.md  LEDGERS.md  PHASE0_ACCEPTANCE_REPORT.md  PHASE9_HARDENING_REPORT.md  POLICY_PROFILES.md  REFERENCE_MECHANISMS.md  RELEASE_HARDENING_REPORT.md  SPACE_TYPES.md  STATIC_COMPILER.md  USAGE.md  fixture_draft.md
docs/archive/: FUNDAMENTAL_FUNCTIONALITY_CHECKLIST.md  PHASE10_COMPLETION_REPORT.md  README.md  mwb_phase0_ledger.md
docs/buildout/: README.md
docs/fixtures/: claim_association.json  hypothesis_phase5.json  space_check_valid.json
tests/: test_causal_verification_integration.py  test_package.py  test_phase0_project.py  test_phase10_checklist_completion.py  test_phase11_fundamental_review.py  test_phase12_evidence_graph.py  test_phase14_research_ledgers.py  test_phase15_hypothesis_lifecycle.py  test_phase16_space_types.py  test_phase17_static_compiler.py  test_phase18_causal_verification.py  test_phase19_example_geometry.py  test_phase1_domain.py  test_phase20_diagnosis_probes.py  test_phase21_reference_mechanisms.py  test_phase22_claim_grammar.py  test_phase23_policy_profiles.py  test_phase24_adapter_expansion.py  test_phase25_release_hardening.py  test_phase2_ipython.py  test_phase3_adapters.py  test_phase4_context.py  test_phase5_workflow.py  test_phase6_next_probe.py  test_phase7_cards_draftguard.py  test_phase8_self_ground_ingest.py  test_static_compiler_integration.py
(+86 files in other folders)
