[project]
name = "mechanistic-workbench"
version = "0.1.0"
description = "Local-first IPython-native mechanistic interpretability workbench."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "ipython>=8",
    "numpy>=1.26",
    "pandas>=2.2",
    "pydantic>=2.7",
    "rich>=13.7",
    "ruamel.yaml>=0.18",
    "sae-lens>=5.0",
    "torch>=2.2",
    "transformer-lens>=2.0",
    "typer>=0.12",
]

[project.scripts]
mwb = "mwb.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mwb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: tests that require optional model, SAE, or IPython runtime resources",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
